lots of changes

--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <body>
-<h1> my site</h1>
+<h1> Read Scale</h1>
     <form action="/templates" method="POST">
-        <input type ="text" name = "boxQty">
-        <input type ="text" name = "lotNumber">
-        <input type ="text" name = "PONumber">
-        <input type ="text" name = "sku">
-        <input type ="submit" name="index" value="getstuff">
+       <!----Box Quantity: <input type ="text" name = "boxQty"><br>
+        Lot Number:<input type ="text" name = "lotNumber"><br>
+        PONumber:<input type ="text" name = "PONumber"><br>
+        SKU Number:<input type ="text" name = "sku"><br>-->
+        readscale<br><input type ="radio" name = "readscale" value = "True">On<br>
+        <input type ="radio" name = "readscale" value = "False">Off<br>
+        <input type ="submit" value="Submit">
     </form>
 
 </body>
